--- a/AST10106/Lab2/.project
+++ b/AST10106/Lab2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AST10106</name>
+	<name>Lab2</name>
 	<comment></comment>
 	<projects>
 	</projects>
